glupload: fix double free of EGLImage

Caching EGLImage in qdata isn't thread safe nor needed. It's going away
upstream too.

https: //gitlab.freedesktop.org/gstreamer/gst-plugins-base/issues/375
https: //gitlab.freedesktop.org/gstreamer/gst-plugins-base/issues/659
Change-Id: I4e4a04682d53b12633ddf5dfb3bd3793b9298742